--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
           <input type="text" id="input-box" placeholder="Add your task" />
-          <button onclick="AddTask()">Add Task</button>
+          <button onclick="AddTask()">Add</button>
         </div>
         <ul id="list-container">
           <!-- <li class="checked">Task 1</li>
@@ -50,3 +50,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
